--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "@vueuse/core": "^11.3.0",
     "ant-design-vue": "^4.2.6",
     "axios": "^1.7.8",
     "pinia": "^2.2.6",
