--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@eslint/js": "^9.14.0",
     "@vitejs/plugin-vue": "^5.1.4",
     "eslint": "^9.14.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-vue": "^9.30.0",
+    "prettier": "^3.4.1",
     "sass": "^1.81.0",
     "unplugin-vue-components": "^0.27.4",
     "vite": "^5.4.10",
