--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.25.9",
     "@eslint/js": "^9.14.0",
     "@vitejs/plugin-vue": "^5.1.4",
     "eslint": "^9.14.0",
@@ -29,7 +28,6 @@
     "sass": "^1.81.0",
     "unplugin-vue-components": "^0.27.4",
     "vite": "^5.4.10",
-    "vite-plugin-vue-devtools": "^7.5.4",
-    "vue-eslint-parser": "^9.4.3"
+    "vite-plugin-vue-devtools": "^7.5.4"
   }
 }
