二级分类和分类列表数据

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vueuse/core": "^11.3.0",
     "ant-design-vue": "^4.2.6",
     "axios": "^1.7.8",
+    "lodash": "^4.17.21",
     "pinia": "^2.2.6",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
