--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "@vueuse/core": "^11.3.0",
-    "ant-design-vue": "^4.2.6",
     "axios": "^1.7.8",
+    "element-plus": "^2.9.0",
     "lodash": "^4.17.21",
     "pinia": "^2.2.6",
     "vue": "^3.5.12",
@@ -27,7 +27,8 @@
     "eslint-plugin-vue": "^9.31.0",
     "prettier": "^3.4.1",
     "sass": "^1.81.0",
-    "unplugin-vue-components": "^0.27.4",
+    "unplugin-auto-import": "^0.18.6",
+    "unplugin-vue-components": "^0.27.5",
     "vite": "^5.4.10",
     "vite-plugin-vue-devtools": "^7.5.4"
   }
